<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TeacherTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="back">Back</string>
    <string name="teacher_setup">Teacher Setup</string>

    <!-- SetupFragment -->
    <string name="setup_first_name">First Name</string>
    <string name="setup_middle_name">Middle Name</string>
    <string name="setup_last_name">Last Name</string>
    <string name="setup_mobile">Mobile #</string>
    <string name="setup_email">Email</string>
    <string name="setup_gender">Gender</string>
    <string name="setup_gender_male">Male</string>
    <string name="setup_gender_female">Female</string>
    <string name="setup_date_of_birth">Date Of Birth</string>
    <string name="setup_certificate_degree">Certificate/Degree</string>
    <string name="setup_employment_date">Employment Date</string>
    <string name="setup_primary_classroom">Primary Classroom</string>
    <string name="setup_mobile_phone_numb_2">Mobile_Phone_Number_2</string>
    <string name="setup_mobile_phone_numb_3">Mobile_Phone_Number_3</string>
    <string name="setup_land_phone_number">Land_Phone_Number</string>
    <string name="setup_email_address_2">Email_Address_2</string>
    <string name="setup_email_address_3">Email_Address_3</string>
    <string name="setup_status">Status</string>
    <string name="setup_updated_by">Updated_By</string>
    <string name="setup_created_by">Created_By</string>
    <string name="setup_cancel">Cancel</string>
    <string name="setup_Submit">Submit</string>
    
    <array name="gender">
        <item >male</item>
        <item>female</item>
    </array>
</resources>
